--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "secret-santa",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
-    "@prisma/client": "^6.19.0",
-    "next": "16.0.5",
-    "next-auth": "^4.24.13",
-    "next-intl": "^4.5.6",
-    "prisma": "^6.19.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "resend": "^6.5.2",
-    "sonner": "^2.0.7",
-    "zod": "^4.1.13"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.5",
-    "jest": "^30.2.0",
-    "tailwindcss": "^4",
-    "ts-jest": "^29.4.5",
-    "typescript": "^5"
-  }
+    "name": "secret-santa",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 3200",
+        "build": "next build",
+        "start": "next start",
+        "lint": "eslint",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@auth/prisma-adapter": "^2.11.1",
+        "@prisma/client": "^6.19.0",
+        "next": "16.0.5",
+        "next-auth": "^4.24.13",
+        "next-intl": "^4.5.6",
+        "prisma": "^6.19.0",
+        "react": "19.2.0",
+        "react-dom": "19.2.0",
+        "resend": "^6.5.2",
+        "sonner": "^2.0.7",
+        "zod": "^4.1.13"
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss": "^4",
+        "@types/jest": "^30.0.0",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "16.0.5",
+        "jest": "^30.2.0",
+        "tailwindcss": "^4",
+        "ts-jest": "^29.4.5",
+        "typescript": "^5"
+    }
 }
