--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "zod": "^4.1.13"
     },
     "devDependencies": {
+        "@svgr/webpack": "^8.1.0",
         "@tailwindcss/postcss": "^4",
         "@types/jest": "^30.0.0",
         "@types/node": "^20",
