--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev -p 3200",
+        "prebuild": "prisma generate",
         "build": "next build",
         "start": "next start",
         "lint": "eslint",
