--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@auth/prisma-adapter": "^2.11.1",
         "@prisma/client": "^6.19.0",
+        "cheerio": "^1.1.2",
         "next": "16.0.7",
         "next-auth": "^4.24.13",
         "next-intl": "^4.5.6",
